<resources>
    <string name="app_name">calculator</string>
    <string name="price">Price?</string>
    <string name="_30">30$</string>
    <string name="tip_percent">Tip percent</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="tip">Tip</string>
    <string name="grand_total">Grand Total</string>
    <string name="calculate">Calculate</string>
</resources>