<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="24sp"
        android:labelFor="@id/num_attend_edit_text" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/_30"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tip_percent"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/grandTotal"
        android:text="@string/grand_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />
</LinearLayout>